--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
+body{
+  margin: 500px;
+  margin-top: 0;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.delete{
+  margin:20px
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pageDiv{
+  margin-top: 50px;
+}.TodoName {
+  font-size: 20px;
+  font-weight: bold;
+}#listFlex{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-between;
+}#listFlex div:nth-child(1){
+  margin-top: 15px;
 }
